--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
     <head>
-        <meta charset = "UTF-8">
-        <meta name ="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alphabet</title>
     </head>
     <body>
@@ -11,7 +11,8 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Column 0</th><th>Column 1</th>
+                        <th>Column 0</th>
+                        <th>Column 1</th>
                     </tr>
                 </thead>
                 <tbody>
