--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Column 0</th>
-                        <th>Column 1</th>
+                        <th></th>
+                        <th scope="col">Column 0</th>
+                        <th scope="col">Column 1</th>
                     </tr>
                 </thead>
                 <tbody>
